###Changelog###
DD/MM/YY

(2/1/14)
- Reverted GameObject's scene property (scene will be null for GameObject when removed).
- Fixed Scene's getGameObjectByName and by Component not returning null if no name/component is found.
- Corrected some game rendering related issue, switch appearing in front of gate.

(1/1/14)
- Happy New Year Release
- Fixed an inconsistency with Component's scene and GameObject's Scene get property.
- Added back previously (accidentally) removed Dialog.png.

(31/12/13)
- Added new Object class to hold reference for Engine.
- Scene property is now accessed via Engine.getEngine();.

(28/12/13)
- Fixed some rendering stuff where setting layer after adding it will cause crash.
- Correctly update objects if enabled.
- Removed iterator and uses while loop for looping instead.
- Fixed OgmoLoader only loading one layer.
- Added new project to demo how to use OgmoLoader.

(25/12/13)
- Merry Christmas. Some bugfixes and maintenance.
- Oops. Fixed timestamp in changelog.
- Rewrote the ogmo loading procedure. OgmoLoader is now a component and no prefab is needed.
- Some bug fix for Tests.
- Renamed scene to scenes and object to objects to avoid confusion when coding in FlashDevelop.

(21/12/13)
- Fixed getGameObject and getComponent

(20/12/13)
- Continue fixing bug where object isn't removed properly. Added new destroyed function to set values to null.
- Merged addChild and addNode into one function.

(15/12/13)
- Rewrote core object system, now uses linked list node system.
- All core objects inherit from node instead of object.
- Seperated add() objects funtions to 4 core functions, mainly engine.addScene(), scene.addGameObject, gameObject.addComponent and component.addComponent.