@@ -1,0 +1,20 @@
+language: c++
+
+before_install:
+  - sudo add-apt-repository ppa:eyecreate/haxe -y
+  - sudo apt-get update
+  - sudo apt-get install haxe -y --force-yes
+  - sudo apt-get install g++-multilib gcc-multilib
+  - mkdir ~/haxelib
+  - haxelib setup ~/haxelib
+  - haxelib -notimeout install openfl
+  - haxelib -notimeout install hxlibc
+  - haxelib -notimeout install lime
+  - haxelib -notimeout install lime-tools
+  - haxelib -notimeout install ze2d
+  - cd $(pwd)/samples/
+  
+script:
+  - haxelib run openfl build Stars/application.xml flash
+  - haxelib run openfl build Terry/application.xml flash
+  - haxelib run openfl build Test/application.xml flash
