@@ -1,1 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?><project>	<app main="boxed.Main" file="Game" swf-version="11.8" />	<window width="1280" height="800" fps="30" background="0xFFFFFF" />		<source path="src" />		<haxelib name="openfl" />	<haxelib name="ze2d" />		<assets path="assets/gfx" rename="gfx" type="image" include="*.png" />	<assets path="assets/sfx" rename="sfx" type="sound" include="*.wav" />	<assets path="assets/level" rename="level" type="text" include="*.oel"/>	<assets path="assets/font" rename="font" type="font" include="*.ttf" /></project>
+<?xml version="1.0" encoding="utf-8"?><project>	<app main="boxed.Main" file="Game" swf-version="11.8" />	<window width="1280" height="800" fps="30" background="0xFFFFFF" />		<source path="src" />		<haxelib name="openfl" />	<haxelib name="ze2d" />		<assets path="assets/gfx" rename="gfx" type="image" include="*.png" />	<assets path="assets/sfx" rename="sfx" type="sound" include="*.wav" />	<assets path="assets/level" rename="level" type="text" include="*.oel"/></project>
