@@ -8,8 +8,5 @@
 	<haxelib name="openfl" />
 	<haxelib name="ze2d" />
 	
-	<assets path="assets/gfx" rename="gfx" type="image" include="*.png" />
-	<assets path="assets/sfx" rename="sfx" type="sound" include="*.wav" />
-	<assets path="assets/level" rename="level" type="text" include="*.oel"/>
 	<assets path="assets/font" rename="font" type="font" include="*.ttf" />
 </project>
