@@ -5,6 +5,7 @@ DD/MM/YY
 - Reverted GameObject's scene property (scene will be null for GameObject when removed).
 - Fixed Scene's getGameObjectByName and by Component not returning null if no name/component is found.
 - Corrected some game rendering related issue, switch appearing in front of gate.
+- Added Travis CI to project (Fixed missing assets/gfx and font folder for samples project).
 
 (1/1/14)
 - Happy New Year Release
